--- a/Source/style.css
+++ b/Source/style.css
@@ -29,6 +29,7 @@ body {
     font-family: 'Varela Round', sans-serif;
     color: white;
     background-color: black;
+    text-shadow: 1px 1px 1px #888888;
 }
 
 h1 {
@@ -40,16 +41,18 @@ h1 {
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 26.4px;
+	text-shadow: 1px 1px 1px #888888;
 }
 
 h2 {
 	letter-spacing: 5px;
 	font-family: 'Varela Round', sans-serif;
-	font-size: 32px;
+	font-size: 28px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 26.4px;
+	text-shadow: 1px 1px 1px #888888;
 }
 
 #content {
@@ -82,6 +85,23 @@ h2 {
 	background-color: black;
 }
 
+/* Feature example */
 .name:nth-child(even) {
-	color: black;
+	color: #80ff00;
+}
+
+.green {
+	color: #80ff00;
+}
+
+/* Link Decoration */
+a:link, a:visited {
+	color: white;
+	text-decoration: none;
+}
+
+a:hover, a:active {
+	/* Green */
+	color: #80ff00;
+	text-decoration: none;
 }
