Added footer foundation

--- a/Source/style.css
+++ b/Source/style.css
@@ -30,6 +30,7 @@ body {
     color: white;
     background-color: black;
     text-shadow: 1px 1px 1px #888888;
+    letter-spacing: 0.5px;
 }
 
 h1 {
@@ -85,6 +86,14 @@ h2 {
 	background-color: black;
 }
 
+#footer-info-left {
+	text-shadow: none;
+}
+
+#footer-info-right {
+	text-shadow: none;
+}
+
 /* Feature example */
 .name:nth-child(even) {
 	color: #80ff00;
@@ -94,7 +103,7 @@ h2 {
 	color: #80ff00;
 }
 
-/* Link Decoration */
+/* Link Style */
 a:link, a:visited {
 	color: white;
 	text-decoration: none;
