--- a/Source/style.css
+++ b/Source/style.css
@@ -1,5 +1,5 @@
 /* Reset */
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -13,8 +13,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -84,6 +84,8 @@ h2 {
 	width: 100%;
 	height: 100px;
 	background-color: black;
+	text-align: center;
+	margin-top: 2%;
 }
 
 #footer-info-left {
@@ -107,10 +109,33 @@ h2 {
 a:link, a:visited {
 	color: white;
 	text-decoration: none;
+	transition: 0.5s ease;
 }
 
 a:hover, a:active {
 	/* Green */
 	color: #80ff00;
 	text-decoration: none;
+
+}
+/*ANIMATION*/
+.animate-top{
+    position:relative;
+    -webkit-animation:animatetop 3.4s;
+    animation:animatetop 3.4s
+}
+@-webkit-keyframes animatetop{
+    from{
+        top:40%;opacity:0
+        }
+         to{
+         top:0;opacity:1
+         }
+ }
+@keyframes animatetop{
+    from{
+        top:40%;opacity:0
+        }to{
+        top:0;opacity:1
+        }
 }
