--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: url('./assets/img/bg.webp') no-repeat center center fixed;
+  background: url('./assets/img/bg-v3.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
